<resources>
    <string name="app_name">Android Dev</string>
    <string name="button_text">Create</string>
    <string name="name_text">Name</string>
    <string name="codeName_text">Code Name</string>
    <string name="price_text">Price</string>
    <string name="description_text">Description:</string>
    <string name="create_service_provision_text">Create Service Provision</string>
    <string name="info_to_create_service_provision_text">Please enter info to create service provision</string>
    <string name="select_a_clinic_text">Select a Clinic</string>
    <string name="search_by_name_text">Search by Name</string>
    <string name="search_text">Search</string>
    <string name="anna_maria_dagmaer">Anna Maria Dagmaer</string>
    <string name="_12_00_pm_23_3_2023">12:00 PM 23/3/2023</string>
    <string name="no_description_added">No description added...</string>
    <string name="patients">Patients</string>
    <string name="all">All</string>
    <string name="todays_appointments">Today\'s Appointments</string>
    <string name="years">Years old</string>
    <string name="history">History</string>
    <string name="contact">Contact</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="number">Phone Number</string>
    <string name="email">Email</string>
    <string name="meetings">Meetings</string>
    <string name="imagedesc">App Logo</string>
    <string name="upcoming">Upcoming</string>
    <string name="requests">Request</string>
    <string name="past">Past</string>
    <string name="acceptButton">Accept</string>
    <string name="denyButton">Deny</string>
    <string name="user1">Domas Irena</string>
    <string name="user2">Katrina Angharad</string>
    <string name="user3">Joachim Mitsuaki</string>
    <string name="note1">Note: Problems with back pain</string>
    <string name="note2">Note: Sports Massage</string>
    <string name="note3">Note: Medium-Competitive</string>
    <string name="Search">Search</string>
    <string name="arrange_an_appointment">Arrange an appointment</string>
    <string name="select_clinic">Select clinic</string>
    <string name="select_service">Select service</string>
    <string name="time">Time</string>
    <string name="_10_00_am">10:00 AM</string>
    <string name="_11_00_am">11:00 AM</string>
    <string name="_12_00_pm">12:00 PM</string>
    <string name="_13_00_pm">13:00 PM</string>
    <string name="_14_00_pm">14:00 PM</string>
    <string name="_15_00_pm">15:00 PM</string>
    <string name="_16_00_pm">16:00 PM</string>
    <string name="_17_00_pm">17:00 PM</string>
    <string name="date">Date</string>
    <string name="book_appointment">Book appointment</string>
    <string name="total">Total:</string>
    <string-array name="date_options">
        <item>Last Month</item>
        <item>Last Year</item>
        <item>From the start</item>
    </string-array>
    <string name="select">Select period of time</string>
    <string name="description">Description</string>
    <string name="price">Cost</string>
    <string name="title">Economic Movements</string>
</resources>