<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_image_white"
    tools:context=".R9second">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time"
        android:textColor="#808080"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.106"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.598" />

    <HorizontalScrollView
        android:id="@+id/scroll_bar_2"
        android:layout_width="270dp"
        android:layout_height="45dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.695">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/tenAM_button"
                android:layout_width="65dp"
                android:layout_height="35dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/hour_button_default"
                android:text="@string/_10_00_am"
                tools:ignore="TouchTargetSizeCheck" />

            <Button
                android:id="@+id/elevenAM_button"
                android:layout_width="65dp"
                android:layout_height="35dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@drawable/hour_button_default"
                android:text="@string/_11_00_am"
                tools:ignore="TouchTargetSizeCheck" />

            <Button
                android:id="@+id/twelvePM_button"
                android:layout_width="65dp"
                android:layout_height="35dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@drawable/hour_button_default"
                android:text="@string/_12_00_pm"
                tools:ignore="TouchTargetSizeCheck" />

            <Button
                android:id="@+id/thirteenPM_button"
                android:layout_width="65dp"
                android:layout_height="35dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@drawable/hour_button_default"
                android:text="@string/_13_00_pm" />

            <Button
                android:id="@+id/fourteenPM_button"
                android:layout_width="65dp"
                android:layout_height="35dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/hour_button_default"
                android:text="@string/_14_00_pm" />

            <Button
                android:id="@+id/fifthteenPM_button"
                android:layout_width="65dp"
                android:layout_height="35dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/hour_button_default"
                android:text="@string/_15_00_pm" />

            <Button
                android:id="@+id/sixteenPM_button"
                android:layout_width="65dp"
                android:layout_height="35dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/hour_button_default"
                android:text="@string/_16_00_pm" />

            <Button
                android:id="@+id/seventeenPM_button"
                android:layout_width="65dp"
                android:layout_height="35dp"
                android:layout_marginRight="5dp"
                android:background="@drawable/hour_button_default"
                android:text="@string/_17_00_pm" />
        </LinearLayout>
    </HorizontalScrollView>

    <TextView
        android:id="@+id/date_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:textColor="#808080"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.105"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.365" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/arrange_an_appointment"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.188"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.305" />

    <TextView
        android:id="@+id/Month_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Month"
        android:textColor="#808080"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.909"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.365" />

    <Spinner
        android:id="@+id/servicedropdown"
        android:layout_width="191dp"
        android:layout_height="37dp"
        android:background="@drawable/spinner_background_weeklyplan"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.794"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/placeholder_service_dropdown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_service"
        android:textColor="#808080"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/servicedropdown"
        app:layout_constraintEnd_toEndOf="@+id/servicedropdown"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="@+id/servicedropdown"
        app:layout_constraintTop_toTopOf="@+id/servicedropdown"
        app:layout_constraintVertical_bias="0.6"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/Total_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total"
        android:textColor="#808080"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.296"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.866" />

    <Button
        android:id="@+id/book_appointment"
        android:layout_width="156dp"
        android:layout_height="38dp"
        android:background="@drawable/button_style_filled"
        android:text="@string/book_appointment"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.963"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

    <HorizontalScrollView
        android:id="@+id/scroll_bar_1"
        android:layout_width="272dp"
        android:layout_height="69dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.521"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.472">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/Monday_button"
                android:layout_width="50dp"
                android:layout_height="60dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@drawable/weekplanbuttondefault"
                android:text="Button"
                android:textSize="12sp" />

            <Button
                android:id="@+id/Tuesday_button"
                android:layout_width="50dp"
                android:layout_height="60dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@drawable/weekplanbuttondefault"
                android:text="Button"
                android:textSize="12sp" />

            <Button
                android:id="@+id/Wednesday_button"
                android:layout_width="50dp"
                android:layout_height="60dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@drawable/weekplanbuttondefault"
                android:text="Button"
                android:textSize="12sp" />

            <Button
                android:id="@+id/Thursday_button"
                android:layout_width="50dp"
                android:layout_height="60dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@drawable/weekplanbuttondefault"
                android:text="Button"
                android:textSize="12sp" />

            <Button
                android:id="@+id/Friday_button"
                android:layout_width="50dp"
                android:layout_height="60dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@drawable/weekplanbuttondefault"
                android:text="Button"
                android:textSize="12sp" />

            <Button
                android:id="@+id/Saturday_button"
                android:layout_width="50dp"
                android:layout_height="60dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@drawable/weekplanbuttondefault"
                android:text="Button"
                android:textSize="12sp" />

            <Button
                android:id="@+id/Sunday_button"
                android:layout_width="50dp"
                android:layout_height="60dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@drawable/weekplanbuttondefault"
                android:text="Button"
                android:textSize="12sp" />
        </LinearLayout>
    </HorizontalScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>